--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/build.properties
@@ -1,1 +1,8 @@
-bin.includes = feature.xml
+bin.includes = epl-v10.html,\
+               eclipse_update_120.jpg,\
+               modeling32.png,\
+               feature.properties,\
+               feature.xml,\
+               license.html
+root=rootfiles
+generate.feature@org.eclipse.emf.teneo.eclipselink.source=org.eclipse.emf.teneo.eclipse.link
