--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/.settings/org.eclipse.jpt.core.prefs
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/.settings/org.eclipse.jpt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Jan 27 22:28:04 CET 2009
+#Mon Feb 02 10:06:08 EST 2009
 eclipse.preferences.version=1
 org.eclipse.jpt.core.discoverAnnotatedClasses=false
 org.eclipse.jpt.core.platform=org.eclipse.eclipselink.platform
