--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.5 2008/05/22 18:18:01 mtaal Exp $
+#  * $Id: feature.properties,v 1.6 2009/02/23 09:11:23 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -35,7 +35,7 @@
 # ==============================================================================
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence SDK
+featureName=Teneo EMF Hibernate SDK
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
