--- a/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2006/10/04 13:26:49 mtaal Exp $
+#  * $Id: feature.properties,v 1.3 2009/02/23 09:11:22 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Source
+featureName=Teneo EMF Hibernate Source
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
@@ -39,7 +39,7 @@ providerName=Eclipse.org
 updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
-description=EMF Object Relational Persistence (source code)
+description=EMF Hibernate Object Relational Persistence (source code)
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
