--- a/plugins/org.eclipse.emf.teneo-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/feature.properties
@@ -11,7 +11,7 @@
 #  *   Martin Taal
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.5 2008/05/22 18:18:09 mtaal Exp $
+#  * $Id: feature.properties,v 1.6 2009/02/23 09:11:24 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -29,16 +29,16 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Runtime
+featureName=Teneo EMF Hibernate Runtime
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Technology (EMFT) Updates
+updateSiteName=Eclipse Modeling Framework Updates
 
 # "description" property - description of the feature
-description=EMF Object Relational Persistence
+description=EMF Hibernate Object Relational Persistence
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
