--- a/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
@@ -10,13 +10,13 @@
 #############################################################################
 
 # "featureName" property - name of the feature
-featureName=Teneo All-In-One Feature
+featureName=Teneo All-In-One Feature (Hibernate and EclipseLink)
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
+updateSiteName=Eclipse Modeling Framework Updates
 
 # "description" property - description of the feature
 description=Teneo All-In-One Feature includes runtime, source code and code examples
