--- a/doc/org.eclipse.emf.teneo.doc-feature/feature.properties
+++ b/doc/org.eclipse.emf.teneo.doc-feature/feature.properties
@@ -30,16 +30,16 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Documentation
+featureName=Teneo EMF Hibernate Documentation
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse Modeling Framework Technology (EMFT) Updates
+updateSiteName=Eclipse Modeling Framework Updates
 
 # "description" property - description of the feature
-description=Eclipse Modeling Framework Technology Teneo (documentation)
+description=Eclipse Modeling Framework Teneo (documentation)
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
