--- a/plugins/org.eclipse.emf.teneo.jpox.eclipse/about.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox.eclipse/about.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.3 2008/02/28 07:07:37 mtaal Exp $
+# * $Id: about.properties,v 1.4 2009/02/24 12:04:51 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -36,7 +36,7 @@ featureText=Eclipse Modeling Framework Technology Object Relational Persistence 
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
-(c) Copyright Springsite BV (The Netherlands) and others. 2006.  All rights reserved.\n\
+(c) Copyright Springsite BV (The Netherlands) and others. 2006 - 2009.  All rights reserved.\n\
 \n\
 Visit http://www.eclipse.org/emft
 
