--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -21,7 +21,8 @@ bin.includes = META-INF/,\
                license.html,\
                modeling32.png,\
                plugin.properties,\
-               mysql-connector-java-5.1.6-bin.jar
+               mysql-connector-java-5.1.6-bin.jar,\
+               hibernate-commons-annotations.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
