--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/build.properties
@@ -3,6 +3,7 @@ bin.includes = epl-v10.html,\
                modeling32.png,\
                feature.properties,\
                feature.xml,\
-               license.html
+               license.html,\
+               about.html
 root=rootfiles
 generate.feature@org.eclipse.emf.teneo.eclipselink.source=org.eclipse.emf.teneo.eclipselink
