--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.3 2009/02/23 09:11:26 mtaal Exp $
+#  * $Id: feature.properties,v 1.4 2009/02/28 20:17:43 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -145,4 +145,4 @@ and re-export of encryption software, to see if this is permitted.\n
 ########### end of license property ##########################################
 
 # "updateSiteName" property - label for the EMFT update site
-updateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
+updateSiteName=Eclipse Modeling Framework (EMF) Updates
