--- a/plugins/org.eclipse.emf.teneo.eclipselink-feature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink-feature/build.properties
@@ -1,1 +1,7 @@
-bin.includes = feature.xml
+bin.includes = feature.xml,\
+               about.html,\
+               eclipse_update_120.jpg,\
+               epl-v10.html,\
+               feature.properties,\
+               license.html,\
+               modeling32.png
