--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -12,12 +12,11 @@ bin.includes = plugin.xml,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
-jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/dom4j-1.6.1.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar,\
-                       org.eclipse.emf.teneo.hibernate.extra.jar
 javacSource=1.5
 javacTarget=1.5
 jars.compile.order = org.eclipse.emf.teneo.hibernate.jar
+jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/dom4j-1.6.1.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar
