--- a/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.10 2008/05/27 07:42:33 mtaal Exp $
+# * $Id: plugin.properties,v 1.11 2009/05/06 16:01:26 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Hibernate Test
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
