--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2008/05/22 18:18:38 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2009/05/06 16:01:31 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,11 +25,9 @@
 # ==============================================================================
 
 Plugin.name = Teneo
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
-pluginName = Julia Model
-providerName = www.example.org
