--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2008/05/22 18:19:42 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2009/05/06 16:01:33 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -26,7 +26,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Hibernate Mapper
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
