--- a/tests/org.eclipse.emf.teneo.commontest/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2008/05/27 07:42:12 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2009/05/06 16:01:34 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Test Framework/CommonTest
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
