--- a/plugins/org.eclipse.emf.teneo.hibernate.extra/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.extra/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2008/06/10 05:24:15 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2009/05/06 16:01:37 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Hibernate Extra
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
