--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2008/06/11 21:04:29 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2009/05/06 16:01:38 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Hibernate Test Libraries Plug-in
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
