--- a/plugins/org.eclipse.emf.teneo.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.5 2008/05/22 18:19:53 mtaal Exp $
+# * $Id: plugin.properties,v 1.6 2009/05/06 16:01:40 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo Eclipse UI
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
