--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/plugin.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.2 2009/01/23 21:51:35 mtaal Exp $
+# $Id: plugin.properties,v 1.3 2009/05/06 16:01:53 mtaal Exp $
 
 # ====================================================================
 # To code developer:
@@ -17,4 +17,4 @@
 # ====================================================================
 
 pluginName = EMF Teneo EclipseLink 
-providerName = www.example.org
+providerName = Eclipse Modeling Project
