--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/plugin.properties
@@ -2,10 +2,10 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.4 2009/01/27 22:05:25 seberle Exp $
+# $Id: plugin.properties,v 1.5 2009/05/06 16:01:54 mtaal Exp $
 
 pluginName = EMF Teneo EclipseLink Library Edit Support
-providerName = www.example.org
+providerName = Eclipse Modeling Project
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} | {0}
