--- a/plugins/org.eclipse.emf.teneo.orm/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2009/03/15 23:45:03 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2009/05/06 16:01:55 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = Teneo ORM Generation
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
