--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2009/03/23 18:04:11 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2009/05/06 16:02:02 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 pluginName = Teneo ORM Eclipse UI
-pluginProvider = Eclipse.org
+pluginProvider = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
