--- a/plugins/org.eclipse.emf.teneo.eclipselink.ui/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.ui/plugin.properties
@@ -11,5 +11,5 @@
 # ====================================================================
 
 pluginName = EMF Teneo EclipseLink UI Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Modeling Project
 
