--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.12 2008/06/10 09:33:17 mtaal Exp $
+# $Id: build.properties,v 1.13 2009/05/06 17:10:50 mtaal Exp $
 
 bin.includes = .,\
                model/,\
@@ -20,6 +20,4 @@ source.. = src/
 output.. = bin/
 javacSource = 1.5
 javacTarget = 1.5
-jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.jpox.libraries/jdo2-api-2.0.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.jpox.libraries/jpox-1.1.9.jar
+jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar
