--- a/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties
+src.includes = about.html
                
