--- a/plugins/org.eclipse.emf.teneo.orm/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.2 2009/05/08 03:40:49 mtaal Exp $
+# $Id: build.properties,v 1.3 2009/06/08 07:43:08 mtaal Exp $
 
 bin.includes = .,\
                model/,\
@@ -18,3 +18,4 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+src.includes = about.html
