--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -58,7 +58,8 @@ bin.includes = META-INF/,\
                slf4j-api-1.5.2.jar,\
                javassist-3.4.GA.jar,\
                commons-collections-3.1.jar,\
-               hibernate_sources_3.3.jar
+               hibernate_sources_3.3.jar,\
+               slf4j-nop-1.5.2.jar
 jars.extra.classpath = antlr-2.7.6.jar,\
                        c3p0-0.9.1.jar,\
                        commons-collections-3.1.jar,\
