--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.21 2009/05/22 18:54:16 mtaal Exp $
+# $Id: build.properties,v 1.22 2009/06/08 15:47:38 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -20,6 +20,14 @@ output.. = bin/
 javacSource=1.5
 javacTarget=1.5
 src.includes = hbm/,\
-               src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml
+               src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/javax.persistence_1.99.0.jar
