--- a/tests/org.eclipse.emf.teneo.eclipselink.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.tests/build.properties
@@ -9,4 +9,11 @@ bin.includes = META-INF/,\
                about.html,\
                .,\
                plugin.properties
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
