--- a/plugins/org.eclipse.emf.teneo.orm/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.3 2009/06/08 07:43:08 mtaal Exp $
+# $Id: build.properties,v 1.4 2009/06/08 15:47:50 mtaal Exp $
 
 bin.includes = .,\
                model/,\
@@ -18,4 +18,11 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
