--- a/plugins/org.eclipse.emf.teneo.hibernate.extra/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.extra/build.properties
@@ -3,3 +3,11 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                README.TXT
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               epl-v10.html,\
+               license.html,\
+               copyright.txt,\
+               modeling32.png,\
+               plugin.properties
