--- a/plugins/org.eclipse.emf.teneo.eclipselink.common/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.common/build.properties
@@ -9,4 +9,10 @@ bin.includes = META-INF/,\
                about.html,\
                .,\
                plugin.properties
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               epl-v10.html,\
+               license.html,\
+               copyright.txt,\
+               modeling32.png
