--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/build.properties
@@ -10,4 +10,11 @@ bin.includes = plugin.xml,\
                about.html,\
                META-INF/,\
                .
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               modeling32.png,\
+               license.html,\
+               plugin.properties
