--- a/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/buckminster.properties
@@ -29,12 +29,6 @@ site.pack200=false
 # If a site should be signed
 site.signing=false
 
-# If a site should be signed locally, or remotely at Eclipse
-# signing.type=eclipse.remote
-
-# Should local signing be performed
-#local.sign=true
-
 # Should source bundles be built and included
 cbi.include.source=true
 
@@ -42,3 +36,12 @@ cbi.include.source=true
 target.os=*
 target.ws=*
 target.arch=*
+
+signing.type=eclipse.local
+#signing.type=eclipse.remote
+
+teneo.download.area=/home/data/httpd/download.eclipse.org/modeling/emf/teneo
+teneo.build.id=1.2.0M6
+eclipse.download.prefix=file:/home/data/httpd/download.eclipse.org
+
+eclipse.staging.area=${env.HUDSON_HOME}/jobs/${env.JOB_NAME}/signing
