--- a/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
+++ b/releng/org.eclipse.emf.teneo.releng.buckminster/build.xml
@@ -14,7 +14,7 @@ Some important parts have been copied from Buckminster's own
 build setup:
 http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/build.xml?root=Tools_BUCKMINSTER&view=markup
 -->
-<project default="run" name="Texo Builds">
+<project default="build.and.test" name="Texo Builds">
 	<!-- load properties and set timestamp for the build -->
 	<property environment="env"/>
 
@@ -27,10 +27,18 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 		<isset property="env.WORKSPACE" />
 	</condition>
 
-	<condition property="debug.mode" value="${env.DEBUG}" else="true">
-		<isset property="env.DEBUG" />
+	<condition property="teneo.update.site.type" value="${env.TENEO.UPDATE.SITE.TYPE}">
+		<isset property="env.TENEO.UPDATE.SITE.TYPE" />
 	</condition>
-	
+
+	<condition property="site.pack200" value="${env.SITE_PACK200}">
+		<isset property="env.SITE_PACK200" />
+	</condition>
+
+	<condition property="site.signing" value="${env.SITE_SIGNING}">
+		<isset property="SITE_SIGNING" />
+	</condition>
+
 	<!-- Is used in buck.minster also -->
 	<condition property="build.type" value="${env.BUILDTYPE}" else="N">
 		<isset property="env.BUILDTYPE" />
@@ -38,7 +46,8 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 	
 	<property name="buildsPath" location="${hudsonWorkSpacePath}/build"/>
 	
-	<property name="rootPath" location="${buildsPath}/${build.type}${buildTimestamp}"/>
+	<!--property name="rootPath" location="${buildsPath}/${build.type}${buildTimestamp}"/-->
+	<property name="rootPath" location="${buildsPath}"/>
 		
 	<property name="buildRoot" location="${rootPath}/build"/>
 	<property name="testRoot" location="${rootPath}/test"/>	
@@ -50,12 +59,23 @@ http://dev.eclipse.org/viewsvn/index.cgi/trunk/org.eclipse.buckminster.releng/bu
 	<property name="buckminster.output.root" location="${rootPath}/output" />
 	<property name="buckminster.output.temp" location="${rootPath}/temp" />
 
-	<target name="run" depends="init">
+	<import file="ant_common.xml" />
+
+	<target name="build.and.test" depends="init">
    	    <echo message="Building" />
 	    <ant dir="${basedir}/build" antfile="teneo_build.xml" target="run" inheritRefs="true"/>
 
 		<echo message="Testing" />
 	    <ant dir="${basedir}/test" antfile="teneo_test.xml" target="run" inheritRefs="true"/>
+	</target>
+
+	<target name="build.test.and.promote" depends="build.and.test">
+   	    <echo message="Promoting" />
+		<buckminster command="import" workspace="${workspacePath}">
+			<cmdargs>
+				<arg value="org.eclipse.emf.teneo.site:eclipse.feature#promote" />
+			</cmdargs>
+		</buckminster>
 	</target>
 
 	<target name="init">
