--- a/features/org.eclipse.emf.teneo.eclipselink-feature/feature.properties
+++ b/features/org.eclipse.emf.teneo.eclipselink-feature/feature.properties
@@ -10,7 +10,7 @@
 #############################################################################
 
 # "featureName" property - name of the feature
-featureName=EMF Teneo EclipseLink
+featureName=EMF Teneo EclipseLink Runtime
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
