--- a/examples/org.eclipse.emf.teneo.hibernate.examples/plugin.xml
+++ b/examples/org.eclipse.emf.teneo.hibernate.examples/plugin.xml
@@ -5,7 +5,7 @@
  <copyright>
  </copyright>
 
- $Id: plugin.xml,v 1.2 2010/03/02 06:08:36 mtaal Exp $
+ $Id: plugin.xml,v 1.3 2010/03/03 14:34:11 mtaal Exp $
 -->
 
 <plugin>
@@ -20,7 +20,7 @@
    <extension point="org.eclipse.emf.ecore.extension_parser">
       <parser
             type="extlibrary"
-            class="extlibrary.util.ExtlibraryResourceFactoryImpl"/>
+            class="org.eclipse.emf.teneo.hibernate.resource.HibernateResourceFactory"/>
    </extension>
 
 </plugin>
