--- a/examples/org.eclipse.emf.teneo.hibernate.examples/build.properties
+++ b/examples/org.eclipse.emf.teneo.hibernate.examples/build.properties
@@ -2,13 +2,14 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.2 2010/03/02 06:08:36 mtaal Exp $
+# $Id: build.properties,v 1.3 2010/03/03 15:21:55 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               src/org/eclipse/emf/teneo/hibernate/examples/annotations.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
